<resources>
    <string name="app_name">aa_Taschenrechner</string>
    <string name="ac">AC</string>
    <string name="plusminus">"+/-"</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="multi">*</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="minus">-</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="plus">+</string>
    <string name="n0">0</string>
    <string name="n00">00</string>
    <string name="point">.</string>
    <string name="equals">=</string>


</resources>
