<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLay0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg2"
    android:orientation="vertical">
    <!--first row-->
    <LinearLayout
        android:id="@+id/display_screen"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:background="@color/colorBg2"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:cursorVisible="true"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/n0"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/ac" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/divide" />
    </LinearLayout>
    <!--second row-->
    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBg"
            android:text="@string/n7" />
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/n8" />
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/n9" />
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/multi" />
    </LinearLayout>
    <!--third row-->
    <LinearLayout
        android:id="@+id/third_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBg"
            android:text="@string/n4" />
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/n5" />
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/n6" />
        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/minus" />
    </LinearLayout>
    <!--fourth row-->
    <LinearLayout
        android:id="@+id/four_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBg"
            android:text="@string/n1" />
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/n2" />
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/n3" />
        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/plus" />
    </LinearLayout>
    <!--fifth row-->
    <LinearLayout
        android:id="@+id/five_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBg"
            android:text="@string/n0" />
        <Button
            android:id="@+id/double_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/n00" />
        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/point" />
        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorBg"
            android:text="@string/equals" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/relativeAd"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center">
    </LinearLayout>
</LinearLayout>